[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/icons/speaker.png" type="Texture" id=1]
[ext_resource path="res://src/icons/sound-on.png" type="Texture" id=2]
[ext_resource path="res://src/fonts/TitanOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Buttons.gd" type="Script" id=4]
[ext_resource path="res://src/scenes/Score.gd" type="Script" id=5]
[ext_resource path="res://src/img/background2_blur.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=10]
size = 74
outline_size = 8
outline_color = Color( 0.0156863, 0.14902, 0.137255, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0285645, 0.40625, 0.372784, 1 )
border_width_left = 3
border_width_top = 1
border_width_right = 3
border_width_bottom = 4
border_color = Color( 0.0196078, 0.239216, 0.223529, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0181274, 0.257813, 0.236575, 1 )
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.0109482, 0.100098, 0.0922315, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.0235294, 0.333333, 0.305882, 1 )
border_width_left = 3
border_width_top = 1
border_width_right = 3
border_width_bottom = 4
border_color = Color( 0.0153236, 0.150879, 0.138868, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 3 )

[node name="Score" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -388, -54 )
script = ExtResource( 5 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Título" type="RichTextLabel" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -296.0
margin_right = 236.0
margin_bottom = -210.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Parabéns![/center]"
text = "Parabéns!"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Pontuacao" type="RichTextLabel" parent="NinePatchRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -139.0
margin_right = 236.0
margin_bottom = 33.0
size_flags_vertical = 0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Pontuação:xxxx[/center]"
text = "Pontuação:xxxx"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Sound" type="Button" parent="NinePatchRect"]
margin_left = 1192.0
margin_top = 16.0
margin_right = 1262.0
margin_bottom = 86.0
focus_mode = 0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
icon = ExtResource( 1 )
icon_align = 1
expand_icon = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Music" type="Button" parent="NinePatchRect"]
margin_left = 1104.0
margin_top = 16.0
margin_right = 1174.0
margin_bottom = 86.0
focus_mode = 0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
enabled_focus_mode = 0
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Voltar" type="Button" parent="NinePatchRect"]
margin_left = 8.0
margin_top = 640.0
margin_right = 144.0
margin_bottom = 709.0
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Voltar"
script = ExtResource( 4 )

[node name="Sair" type="Button" parent="NinePatchRect"]
margin_left = 1136.0
margin_top = 640.0
margin_right = 1272.0
margin_bottom = 709.0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "Sair"
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="mouse_entered" from="NinePatchRect/Sound" to="NinePatchRect/Sound" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Sound" to="NinePatchRect/Sound" method="_on_Sound_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/Music" to="NinePatchRect/Music" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Music" to="NinePatchRect/Music" method="_on_Music_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/Voltar" to="NinePatchRect/Voltar" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Voltar" to="NinePatchRect/Voltar" method="_on_Voltar_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/Sair" to="NinePatchRect/Sair" method="_on_Button_mouse_entered"]
[connection signal="pressed" from="NinePatchRect/Sair" to="NinePatchRect/Sair" method="_on_Sair_pressed"]
